# simpleton

./: .gitignore  README.md  build.bat  build_engine.bat  build_game.bat  build_openal.bat  build_vars.bat  clear.bat  config.ini
game/: CMakeLists.txt
game/src/: game.cpp  game.hpp  main.cpp
simpleton/: CMakeLists.txt  api.hpp
simpleton/src/: config.cpp  config.hpp  engine.cpp  engine.hpp  inputs.cpp  inputs.hpp  logger.cpp  logger.hpp  renderer.cpp  renderer.hpp  simpleMesh.cpp  simpleMesh.hpp  simpleShader.cpp  simpleShader.hpp  simpleTexture.cpp  simpleTexture.hpp  timer.cpp  timer.hpp  utils.hpp
simpleton/src/audio/: audioManager.cpp  audioManager.hpp  soundSource.cpp  soundSource.hpp
simpleton/src/graphics/: mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  shaderUniformManager.cpp  shaderUniformManager.hpp
simpleton/src/inputs/: inputsManager.cpp  inputsManager.hpp
simpleton/src/loaders/: audioWavLoader.cpp  audioWavLoader.hpp
simpleton/src/resources/: resourceManager.cpp  resourceManager.hpp  sound.cpp  sound.hpp  texture.cpp  texture.hpp
